--- a/index.html
+++ b/index.html
@@ -23,70 +23,145 @@
         }
 
         /* LOADER - KEPT EXACTLY THE SAME */
-        .earth-loader {
-            --watercolor: #3344c1;
-            --landcolor: #7cc133;
-            width: 7.5em;
-            height: 7.5em;
-            background-color: var(--watercolor);
-            position: relative;
-            overflow: hidden;
-            border-radius: 50%;
-            box-shadow: inset 0em 0.5em rgba(255, 255, 255, 0.25), inset 0em -0.5em rgba(0, 0, 0, 0.25);
-            border: solid 0.15em white;
-            animation: startround 1s;
-        }
+        /* =======================
+   NEW LIQUID METAL LOADER
+   ======================= */
 
-        .earth p {
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding-top: 0.25em;
-            font-size: 1.25em;
-            font-family: "Gill Sans", sans-serif;
-        }
+.loader-main {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+}
 
-        .earth-loader svg {
-            position: absolute;
-            width: 7em;
-            height: auto;
-        }
+/* From Uiverse.io by chase2k25 */ 
+.loader-container {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background: #000000;
+  border: 5px solid rgb(255, 255, 255);
+  border-radius: 50%;
+  overflow: hidden;
+  filter: contrast(30);
+}
 
-        .earth-loader svg:nth-child(1) { bottom: -2em; animation: round1 5s infinite linear 0.75s; }
-        .earth-loader svg:nth-child(2) { top: -3em; animation: round1 5s infinite linear; }
-        .earth-loader svg:nth-child(3) { top: -2.5em; animation: round2 5s infinite linear; }
-        .earth-loader svg:nth-child(4) { bottom: -2.2em; animation: round2 5s infinite linear 0.75s; }
+.liquid-metal-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: blur(15px);
+  animation: rotate-bg 25s linear infinite;
+}
 
-        @keyframes startround {
-            0%, 75% { filter: brightness(500%); box-shadow: none; }
-            100% { filter: brightness(100%); box-shadow: inset 0em 0.5em rgba(255, 255, 255, 0.25), inset 0em -0.5em rgba(0, 0, 0, 0.25); }
-        }
+.liquid-metal-wrapper::before {
+  content: "";
+  position: absolute;
+  width: 200%;
+  height: 200%;
+  top: -50%;
+  left: -50%;
+  background: radial-gradient(circle, #8e2de2, transparent 50%);
+  animation: rotate-bg 30s linear infinite reverse;
+}
 
-        @keyframes round1 {
-            0% { left: -2em; opacity: 1; transform: skewX(0deg) rotate(0deg); }
-            30% { left: -6em; transform: skewX(-25deg) rotate(25deg); }
-            31%, 35% { opacity: 0; }
-            45% { left: 7em; opacity: 1; transform: skewX(25deg) rotate(-25deg); }
-            100% { left: -2em; transform: skewX(0deg) rotate(0deg); }
-        }
+.main-orb {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 120px;
+  height: 120px;
+  margin-top: -60px;
+  margin-left: -60px;
+  background: radial-gradient(circle at 30% 30%, #f0f0f0, #a0a0a0);
+  border-radius: 50%;
+  animation: pulse 4s ease-in-out infinite;
+}
 
-        @keyframes round2 {
-            0% { left: 5em; }
-            75% { left: -7em; transform: skewX(-25deg) rotate(25deg); }
-            76%, 77% { opacity: 0; }
-            80% { left: 8em; opacity: 1; transform: skewX(25deg) rotate(-25deg); }
-            100% { left: 5em; }
-        }
+.satellite-orb {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -30px;
+  margin-left: -30px;
+  border-radius: 50%;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(0.65, 0, 0.35, 1);
+}
 
-        .earth {
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: #000;
-        }
+.loader-text {
+  font-family: "Exo 2", sans-serif;
+  font-size: 1.6em;
+  color: #ffffff;
+  margin-top: 25px;
+  letter-spacing: 2px;
+  opacity: 0;
+  animation: reveal-text 4s ease-in-out infinite;
+}
+
+/* Animations */
+@keyframes pulse {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.15); }
+}
+
+@keyframes rotate-bg {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+@keyframes flow-1 {
+  0%, 100% { transform: rotate(0deg) translateX(150px) scale(0.5); }
+  50% { transform: rotate(180deg) translateX(0) scale(1); }
+}
+
+@keyframes flow-2 {
+  0%, 100% { transform: rotate(0deg) translateY(150px) scale(0.6); }
+  50% { transform: rotate(180deg) translateY(0) scale(1); }
+}
+
+@keyframes flow-3 {
+  0%, 100% { transform: rotate(0deg) translateX(-150px) scale(0.7); }
+  50% { transform: rotate(180deg) translateX(0) scale(1); }
+}
+
+@keyframes reveal-text {
+  0%, 40%, 90%, 100% { opacity: 0; }
+  50%, 70% { opacity: 1; }
+}
+
+/* Satellite Colors */
+.satellite-orb:nth-child(1) {
+  animation-name: flow-1;
+  animation-duration: 4s;
+  background: #00c6ff;
+}
+.satellite-orb:nth-child(2) {
+  animation-name: flow-2;
+  animation-duration: 4s;
+  animation-delay: -1s;
+  background: #f80759;
+}
+.satellite-orb:nth-child(3) {
+  animation-name: flow-3;
+  animation-duration: 4s;
+  animation-delay: -2s;
+  background: #00ff00;
+}
+.satellite-orb:nth-child(4) {
+  animation-name: flow-1;
+  animation-duration: 4s;
+  animation-delay: -3s;
+  background: #ffff00;
+}
+
 
         /* MODERN CHAT STYLES */
         #chatContainer {
@@ -434,7 +509,7 @@
 </head>
 
 <body>
-<div class="earth" id="loader">
+<!-- <div class="earth" id="loader">
     <div class="earth-loader">
         <svg viewBox="0 0 200 200"><circle cx="100" cy="100" r="100" fill="#7cc133"/></svg>
         <svg viewBox="0 0 200 200"><circle cx="100" cy="100" r="100" fill="#3344c1"/></svg>
@@ -442,7 +517,21 @@
         <svg viewBox="0 0 200 200"><circle cx="100" cy="100" r="100" fill="#3344c1"/></svg>
     </div>
     <p>Connecting...</p>
+</div> -->
+
+<div id="loader" class="loader-main">
+    <div class="loader-container">
+        <div class="liquid-metal-wrapper">
+            <div class="main-orb"></div>
+            <div class="satellite-orb"></div>
+            <div class="satellite-orb"></div>
+            <div class="satellite-orb"></div>
+            <div class="satellite-orb"></div>
+        </div>
+    </div>
+    <p class="loader-text">Connecting...</p>
 </div>
+
 
 <div id="chatContainer">
     <h1 class="chat-header">
